docs: update button docs

--- a/src/components/ui/Button/Button.docs.mdx
+++ b/src/components/ui/Button/Button.docs.mdx
@@ -27,8 +27,7 @@ import * as ButtonStories from "./Button.stories";
 
 <ArgTypes />
 
-Additional props passed into `Button` will be forwarded along to the underlying
-button element.
+Additional props passed into `Button` will be forwarded along to the underlying button element.
 
 ### Button `asChild`
 
@@ -41,7 +40,7 @@ button element.
 ### Button `className`
 
 ```jsx
-<Button className="custom-class">Submit</Button>
+<Button className="custom-class">Button</Button>
 ```
 
 ### Button `size`
